# Clip_Pocket

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.ja.md  architecture.md  build.md  oss-check.md
src/clip_pocket/: __init__.py  app.py  constants.py  diagnostics.py  history.py  i18n.py  resources.py  settings.py  startup.py  ui.py  win32_host.py
tests/: test_app.py  test_history.py  test_i18n.py  test_settings.py  test_startup.py  test_ui.py  test_win32_host.py
tools/: build_exe.py
